--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,19 @@
-== README
+=Recipes
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+__________________________
 
-Things you may want to cover:
+Let's make a site for sharing recipes.
 
-* Ruby version
+* As a contributor, I want to post new recipes, so that I can share them with others. (COMPLETE)
 
-* System dependencies
+* As a contributor, I want to tag my recipes, so that they are easier to find. (Hint: a recipe has many tags, and a tag has many recipes. Another hint: don't be afraid to create several actions for this: one page for creating tags, one page for creating recipes, one page for adding tags to a recipe.)
 
-* Configuration
+* As a cook, I want to choose a tag and see what recipes have that tag.
 
-* Database creation
+* As a cook, I want to give a recipe 1 through 5 stars, so that can share with others what I think of a recipe.
 
-* Database initialization
+* As a cook, I want to see recipes ordered by the number of stars they have, so that I can focus on the best ones.
 
-* How to run the test suite
+* As a cook, I want to see some new recipes mixed in with the highest-rated ones, so that I can give new recipes with no or few ratings a try. (Hint: make a method that creates an arbitrary weighting between the average number of stars a recipe has, and how old it is.)
 
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* As a cook, I want to search through recipes, so that I can find something with a particular ingredient or word. (Hint: use the Textacular gem.)
