--- a/README.rdoc
+++ b/README.rdoc
@@ -6,9 +6,9 @@ Let's make a site for sharing recipes.
 
 * As a contributor, I want to post new recipes, so that I can share them with others. (COMPLETE)
 
-* As a contributor, I want to tag my recipes, so that they are easier to find. (Hint: a recipe has many tags, and a tag has many recipes. Another hint: don't be afraid to create several actions for this: one page for creating tags (done), one page for creating recipes (done), one page for adding tags to a recipe.)
+* As a contributor, I want to tag my recipes, so that they are easier to find. (Hint: a recipe has many tags, and a tag has many recipes. Another hint: don't be afraid to create several actions for this: one page for creating tags, one page for creating recipes, one page for adding tags to a recipe.) (COMPLETE)
 
-* As a cook, I want to choose a tag and see what recipes have that tag.
+* As a cook, I want to choose a tag and see what recipes have that tag. (COMPLETE)
 
 * As a cook, I want to give a recipe 1 through 5 stars, so that can share with others what I think of a recipe.
 
